@startuml

!theme sunlust
skinparam dpi 300
top to bottom direction
skinparam backgroundColor transparent
skinparam actorStyle awesome
skinparam shadowing false
skinparam ranksep 40

skinparam package {
    backgroundColor #FFFFFF
    borderColor #555555
}
skinparam class {
  backgroundColor #E6F3FF
  borderColor #3995D7
}

' =======================================
' Definizione delle Entità (Tabelle)
' =======================================

' --- Package: Core Entities ---
'package "Core" {
    entity "profiles" as Profiles {
        #id : uuid
        *full_name : varchar
        *pref_role : contest_role
    }
    entity "contests" as Contests {
        #id : uuid
        *name : varchar
        *description : varchar
        *date_time : timestamptz
        *works_submission_start : timestamptz
        *works_submission_end : timestamptz
        *images_paths : text[]
        --
        *organizer_id : uuid <<FK>>
        *place_id : uuid <<FK, UNIQUE>>
    }
    entity "places" as Places {
        #id : uuid
        *address : varchar
        *lat : float
        *lon : float
    }
    entity "messages" as Messages {
        #id : uuid
        *title : varchar
        *body : varchar
        *is_read : bool
        --
        *account_id : uuid <<FK>>
    }
'}

' --- Package: Membership & Invitations ---
'package "Membership & Invitations" {
    entity "participations" as Participations {
        #id : uuid
        *invitation_email : varchar
        *has_submitted : bool
        --
        *contest_id : uuid <<FK>>
        *participant_id : uuid <<FK>>
    }
    entity "juries" as Juries {
        #id : uuid
        *token : varchar <<UNIQUE>>
        *name : varchar
        *type : jury_type
        --
        *contest_id : uuid <<FK>>
        *voting_form_id : uuid <<FK, UNIQUE>>
    }
    entity "jurations" as Jurations {
        #id : uuid
        *invitation_email : varchar
        --
        *contest_id : uuid <<FK>>
        *jury_id : uuid <<FK>>
        *juror_id : uuid <<FK>>
    }
    entity "participant_invitations" as ParticipantInvitations {
        #id : uuid
        *token : varchar <<UNIQUE>>
        *email : varchar
        --
        *contest_id : uuid <<FK>>
    }
    entity "juror_invitations" as JurorInvitations {
        #id : uuid
        *token : varchar <<UNIQUE>>
        *email : varchar
        --
        *contest_id : uuid <<FK>>
        *jury_id : uuid <<FK>>
    }
'}

' --- Package: Works ---
'package "Works" {
    entity "works" as WorksE {
        #id : uuid
        *name : varchar
        *description : varchar
        *images_paths : text[]
        *file_path : text
        --
        *participation_id : uuid <<FK, UNIQUE>>
    }
'}

' --- Package: Voting ---
'package "Voting" {
    ' Voting Forms
    entity "voting_forms" as VotingForms {
        #id : uuid
        *name : varchar
        *description : varchar
    }
    entity "voting_form_fields" as VotingFormFields {
        #id : uuid
        *question : varchar
        *order_index : int
        *type : voting_form_field_type
        slider_min_value : int
        slider_max_value : int
        *is_required : bool
        *scope : voting_form_field_scope
        --
        *voting_form_id : uuid <<FK>>
    }

    ' Voting Process
    entity "voting_sessions" as VotingSessions {
        #id : uuid
        *name : varchar
        *is_geo_restricted : bool
        geo_res_radius : int
        *session_status : voting_session_status
        --
        *contest_id : uuid <<FK>>
        geo_res_place_id : uuid <<FK, UNIQUE>>
    }
    entity "voting_form_submissions" as Submissions {
        #id : uuid
        *voting_session_id : uuid <<FK>>
        voting_session_juror_id : uuid <<FK, UNIQUE>>
    }
    entity "voting_form_submission_values" as SubmissionValues {
        #id : uuid
        *value : text
        --
        *voting_form_submission_id : uuid <<FK>>
        *voting_form_field_id : uuid <<FK>>
        voting_session_participant_id : uuid <<FK>>
    }

    ' Snapshot Tables
    entity "voting_session_juries" as VSJuries {
        #id : uuid
        *jury_name : varchar
        *jury_type : jury_type
        *voting_form_id : uuid
        *jury_token : varchar
        --
        *voting_session_id : uuid <<FK>>
        jury_id : uuid <<FK>>
    }
    entity "voting_session_jurors" as VSJurors {
        #id : uuid
        *has_submitted : bool
        *juror_full_name : varchar
        --
        *voting_session_id : uuid <<FK>>
        *voting_session_jury_id : uuid <<FK>>
        juration_id : uuid <<FK>>
        juror_id : uuid <<FK>>
    }
    entity "voting_session_participants" as VSParticipants {
        #id : uuid
        *order_index : int
        *participant_full_name : varchar
        *work_name : varchar
        *work_description : varchar
        *work_images_paths : text[]
        --
        *voting_session_id : uuid <<FK>>
        participation_id : uuid <<FK>>
    }
    entity "voting_session_exclusions" as VSExclusions {
        #id : uuid
        *voting_session_id : uuid <<FK>>
        *voting_session_juror_id : uuid <<FK>>
        *voting_session_participant_id : uuid <<FK>>
    }

    entity "contest_rankings" as Rankings {
            #id : uuid
            *file_path : text
            --
            *contest_id : uuid <<FK>>
        }
'}

' =======================================
' Definizione delle Relazioni
' =======================================

' --- Core Relationships ---
Profiles ||-l-o{ Messages
Profiles ||--o{ Contests
Contests |o--|| Places

' --- Membership & Invitations ---
Contests ||--o{ Participations
Profiles ||--o{ Participations
Contests ||--o{ ParticipantInvitations

Contests ||--o{ Juries
Juries ||--o{ Jurations
Profiles ||--o{ Jurations
Juries ||--o{ JurorInvitations

' --- Works ---
Participations ||--o| WorksE

' --- Voting Forms ---
Juries ||--|| VotingForms
VotingForms ||--o{ VotingFormFields

' --- Voting Process ---
Contests ||--o{ VotingSessions
VotingSessions |o--o| Places
VotingSessions ||--o{ Submissions
VSJurors ||--o| Submissions
Submissions ||--o{ SubmissionValues
VotingFormFields ||--o{ SubmissionValues

' --- Snapshot Relationships ---
VotingSessions ||--|{ VSJuries
VotingSessions ||--o{ VSJurors
VotingSessions ||--|{ VSParticipants
VSJuries ||--o{ VSJurors

' Dotted lines for optional/SET NULL relationships
Juries ..> VSJuries
Jurations ..> VSJurors
Profiles ..> VSJurors
Participations ..> VSParticipants
SubmissionValues }o-u-o| VSParticipants

' --- Exclusions ---
VSJurors ||-d-o{ VSExclusions
VSParticipants ||-r-o{ VSExclusions

' --- Rankings ---
Contests ||--o{ Rankings

@enduml